--- a/cursilhos/index.css
+++ b/cursilhos/index.css
@@ -2,3 +2,15 @@
     display: flex;
     flex-direction: column;
 }
+
+.icone-expandir {
+    font-size: 18px; 
+    position: absolute; 
+    align-self: flex-end; 
+    background-color: #000c; 
+    color: white; 
+    width: 30px; 
+    text-align: center; 
+    border-top-right-radius: 18%; 
+    border-bottom-left-radius: 20%;
+}
